@@ -1,5 +1,6 @@
 2012-07-11 Ivan Kartolo <ivan@kartolo.de>
 	* Bug #37781: added bounce reason
+	* Bug #37989: fixed file operation permission for non-admin in importer
 
 2012-07-04 Ivan Kartolo <ivan@kartolo.de>
 	* Bug #38003: hide query editor if user doesn't have right to the recipient table
